# pyeventroute

./: Makefile  README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
config/: project.py  python.py
pyeventroute/: configs.py  route.py  static.py
