[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyeventroute"
version = "0.0.6"
requires-python = ">=3.12"
authors = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
maintainers = [
	{ name = "Mark Veltzer", email = "mark.veltzer@gmail.com" }
]
description = "pyeventroute helps you route events to loggers or to any other place"
readme = "README.md"
license = "MIT"
keywords=[
    "event",
    "logging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytconf",
]

[project.urls]
"Homepage" = "https://github.com/veltzer/pyeventroute"
"Bug Tracker" = "https://github.com/veltzer/pyeventroute/issues"
"Documentation" = "https://veltzer.github.io/pyeventroute"
"Download" = "https://pypi.org/project/pyeventroute/"
"Repository" = "https://github.com/veltzer/pyeventroute"


[tool.ruff]
line-length = 130

[tool.pytest.ini_options]
pythonpath = ["src"]
